<resources>
    <!--dialog editor margin-->
    <dimen name="dialog_text_margin_horizontal">25dp</dimen>
    <dimen name="dialog_text_margin_vertical">15dp</dimen>
    <string name="app_name">HelloFlower</string>
    <string name="title_activity_settings">设置</string>
    <string-array name="sensor_type_array">
        <item>温度</item>
        <item>湿度</item>
    </string-array>
    <!-- Preference path-->
    <string name="preference_path">com.example.helloflower_kotlin_preferences</string>
    <!-- Preference Titles -->
    <string name="settings_header">本机属性设置</string>
    <string name="sync_header">同步设置</string>
    <string name="connection_header">测试连接</string>
    <!-- App Preferences -->
    <string name="ProductKey">ProductKey</string>
    <string name="DeviceName">DeviceName</string>
    <string name="DeviceSecret">DeviceSecret</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>


    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="userDescription">智能植株监控平台</string>
    <string name="userName">HelloFlower</string>
    <string name="navProfile">主页</string>
    <string name="navSettings">设置</string>
    <string name="navFeedback">反馈</string>
    <string name="log">
        \n2020-12-15 --- v0.1.4\n
        * 基本实现了反馈功能\n

        \n2020-12-13 --- v0.1.3\n
        * 更新了drawer的选项\n
        * 初步添加setting页面\n
        * 初步添加反馈页面\n

        \n2020-12-10 --- v0.1.2\n
        * 导入了Retrofit库，使用阿里云服务器实现了基础的网络数据获取：具体途径是点击进入某个列表项的详情菜单后，再点击浮动按钮\n
        * ESP32开发板到手，WIFI模块测试正常\n
        * 和组员讨论IOT选用阿里IOT平台+mqtt或者阿里ECS云服务器+http，初步决定使用前者\n

        \n2020-12-8 --- v0.1.1\n
        * 添加首页刷新的视觉效果\n
        * 增加详情页，使用collapse布局\n
        * 为首页列表项添加点击事件，打开对应详情页\n
        * 修改详情页标题栏，实现视差、状态栏隐藏\n

        \n2020-12-7 --- v0.1.0\n
        * 首次推送至git\n
        * 为首页添加drawer布局\n
        * 为首页添加侧边3按钮\n
        * 为首页添加滑动卡片布局\n</string>
    <string name="submitFeedback">提交反馈</string>
    <string name="feedbackHint">请在此处填写反馈意见</string>
    <string name="add_new_flower">添加新的植物</string>
    <string name="new_flower_groupID_hint">阿里云分组ID</string>
    <string name="new_flower_groupName_hint">植物名称</string>
    <string name="sensor_name">设备名称</string>
</resources>