<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_header">

        <EditTextPreference
            android:key="ProductKey"
            android:title="@string/ProductKey"
            android:persistent="true"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:key="DeviceName"
            android:title="@string/DeviceName"
            android:persistent="true"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:key="DeviceSecret"
            android:title="@string/DeviceSecret"
            android:persistent="true"
            app:useSimpleSummaryProvider="true" />

<!--        <ListPreference-->
<!--            app:defaultValue="reply"-->
<!--            app:entries="@array/reply_entries"-->
<!--            app:entryValues="@array/reply_values"-->
<!--            app:key="reply"-->
<!--            app:title="@string/reply_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

    </PreferenceCategory>

<!--    <PreferenceCategory app:title="@string/sync_header">-->

<!--        <SwitchPreferenceCompat-->
<!--            app:key="sync"-->
<!--            app:title="@string/sync_title" />-->

<!--        <SwitchPreferenceCompat-->
<!--            app:dependency="sync"-->
<!--            app:key="attachment"-->
<!--            app:summaryOff="@string/attachment_summary_off"-->
<!--            app:summaryOn="@string/attachment_summary_on"-->
<!--            app:title="@string/attachment_title" />-->

<!--    </PreferenceCategory>-->

</PreferenceScreen>